[gd_scene load_steps=2 format=3 uid="uid://7mxxcr3jvooo"]

[ext_resource type="Script" uid="uid://qvbffjinnqxn" path="res://SCRIPT/CREAR_SALA.gd" id="1_q1uwv"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_q1uwv")

[node name="Panel" type="Panel" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="BTN_CREAR_SALA" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 590.0
offset_top = 364.0
offset_right = 946.0
offset_bottom = 455.0
theme_override_font_sizes/font_size = 60
text = "CREAR SALA
"

[node name="BTN_VOLVER" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 632.0
offset_top = 513.0
offset_right = 866.0
offset_bottom = 604.0
theme_override_font_sizes/font_size = 60
text = "VOLVER"

[node name="TXT_SALA" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 539.0
offset_top = 228.0
offset_right = 1046.0
offset_bottom = 289.0
theme_override_font_sizes/font_size = 41
placeholder_text = "ESCRIBE AQUI..."
